# dominion

./: Dominion.cabal  LICENSE  README  stack.yaml
app/: Main.hs
src/: Cards.hs  Dist.hs  GameState.hs  MonteCarlo.hs  Train.hs
