name:                Dominion
version:             0.1.0.0
synopsis:            AI for the card game Dominion
description:         Reinforcment learning meets crazy types
homepage:            https://github.com/bogiebro/dominion#readme
license:             BSD3
license-file:        LICENSE
author:              Sam Anklesaria
maintainer:          amsay@amsay.net
copyright:           2016 Yappy Dog Systems
category:            Game
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Dist, GameState 
  default-extensions:  TemplateHaskell, OverloadedLists, OverloadedStrings,
                       ParallelListComp, ConstraintKinds, RankNTypes
  build-depends:       base >= 4.7 && < 5, transformers, lens,
                       random, text, vector, containers, mtl, unix, MemoTrie
  default-language:    Haskell2010

executable dominion
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base , Dominion, optparse-applicative, vector, text
  default-language:    Haskell2010

test-suite dominion-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Dominion
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/bogiebro/dominion
